<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RegistrarFragment">
    <include
        android:id="@+id/toolbar_registro"
        layout="@layout/bar_layout">

    </include>
    <LinearLayout
        android:gravity="center"
        android:layout_below="@id/toolbar_registro"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="70dp"
                    android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:padding="5dp"
                            android:id="@+id/edt_registro_userName"
                            android:layout_marginLeft="30dp"
                            android:hint="@string/tv_nombre_de_usuario"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="60dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:padding="5dp"
                            android:id="@+id/edt_registro_correo"
                            android:layout_marginLeft="30dp"
                            android:hint="@string/edt_correo"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="120dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:id="@+id/edt_registro_password"
                            android:layout_marginLeft="30dp"
                            android:hint="@string/edt_password"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="180dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:id="@+id/edt_registro_confirmar"
                            android:layout_marginLeft="30dp"
                            android:hint="@string/edt_confirmar_password"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        style="@style/TextAppearance.AppCompat.Button"
                        android:id="@+id/bt_registrar"
                        android:background="@color/colorAccent"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="20dp"
                        android:layout_marginTop="280dp"
                        android:text="@string/bt_registrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.v7.widget.CardView>
            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</RelativeLayout>